<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.razzaliaxindiferous.dummysqlapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:text="@string/create_button"
            android:onClick="create"
            android:layout_margin="8dp"
            android:id="@+id/create_button" />
        <Button
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:text="@string/update_button"
            android:onClick="update"
            android:layout_margin="8dp"
            android:id="@+id/update_button" />
        <Button
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:text="@string/read_button"
            android:onClick="read"
            android:layout_margin="8dp"
            android:id="@+id/read_button" />
        <Button
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:text="@string/delete_button"
            android:onClick="delete"
            android:layout_margin="8dp"
            android:id="@+id/delete_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_text_view"
            android:layout_margin="8dp"
            android:id="@+id/database_text_view" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interaction_text_view"
            android:layout_margin="8dp"
            android:id="@+id/interaction_text_view" />
    </LinearLayout>


</RelativeLayout>
